# 26-sdu-cybersecurity-innovation-practice

./: .gitignore
第一次作业/bitcoin_testnet_parser/: .gitignore  blockhash.txt  btc_parser.py  make_samples.py  receiver_address.txt  sender_address.txt  test_parser.py  tx_api.json  tx_api_pretty.json  tx_status.json  txid.txt
第一次作业/bitcoin_testnet_parser/samples/: synthetic_segwit_tx.hex  testnet4_genesis_block.hex  testnet4_genesis_tx.hex
第二次作业/ecdsa-lab/: forge_demo
第二次作业/ecdsa-lab/results/: bench_current.txt  forge_demo.txt  forge_demo_source_sha256.txt
第二次作业/ecdsa-lab/results/bugfix/: commit_summary.txt  field_cmov_fix.txt
第二次作业/ecdsa-lab/results/performance/: bench_v040_5runs.txt  bench_v041_5runs.txt  comparison_summary.txt  configure_v040.txt
第二次作业/ecdsa-lab/results/performance/source_diff/: 01_diff_stat.txt  02_changed_files.txt  03_relevant_files.txt  04_commit_summary.txt  05_commit_files.txt  06_core_diff.txt  07_report_summary.txt
第二次作业/ecdsa-lab/results/source_trace/: 01_public_verify.txt  02_internal_verify.txt
第二次作业/ecdsa-lab/src/: forge_demo.c
第五次+第六次作业/: .gitignore
第五次+第六次作业/fhe_conv_assignment/: CMakeLists.txt  README.md  SUBMISSION_CHECKLIST.md  run.sh
第五次+第六次作业/fhe_conv_assignment/include/: fhe_convolution.hpp
第五次+第六次作业/fhe_conv_assignment/report/: report.tex
第五次+第六次作业/fhe_conv_assignment/results/: expected_output.txt  reference_verification.txt  syntax_check.txt
第五次+第六次作业/fhe_conv_assignment/scripts/: verify_reference.py
第五次+第六次作业/fhe_conv_assignment/src/: fhe_convolution.cpp  main.cpp
